--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "assert": "^1.4.1",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "scp2": "^0.5.0"
   },
   "devDependencies": {}
 }
