--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "assert": "^1.4.1",
     "body-parser": "^1.17.2",
+    "bunyan": "^1.8.12",
+    "bunyan-elasticsearch": "^1.0.1",
     "express": "^4.15.4",
     "mongodb": "^2.2.31",
     "scp2": "^0.5.0"
